--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/tabular"]
 	path = bundle/tabular
 	url = git://github.com/godlygeek/tabular.git
+[submodule "bundle/mustang-vim"]
+	path = bundle/mustang-vim
+	url = http://github.com/croaker/mustang-vim
